--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@actions/core": "^1.11.1",
     "@actions/http-client": "^2.2.3",
+    "http-status-codes": "^2.3.0",
     "rolldown": "1.0.0-beta.30"
   }
 }
